crates/tui/snapshots/fullscreen/frame/transcript_jump_to_bottom.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 50, 16)"
---
  .                                  [Dashboard]  
                                                  
● Model invocation failed 2                       
                                                  
● Model invocation failed 3                       
                                                  
● Model invocation failed 4                       
                                                  
● Model invocation failed 5                       
             Jump to bottom (click) ↓             
                                                  
  ──────────────────────────────────────────────  
  >                                               
  ───────────────────────────── Automatic model   
                                                  
  ⏸ Manual · ← Dashboard · ? for shortcuts
