crates/tui/snapshots/fullscreen/frame/transcript_scrolled_to_first_message.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: scrolled_to_start
---
  /work/ash                                                        [Dashboard]  
                                                                                
● Conversation started.                                                         
                                                                                
● Model invocation failed 0                                                     
                                                                                
● Model invocation failed 1                                                     
                                                                                
● Model invocation failed 2                                                     
                                                                                
● Model invocation failed 3                                                     
                                                                                
● Model invocation failed 4                                                     
                            Jump to bottom (click) ↓                            
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
